fix etext title vertical alignment in firefox (#318)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1902,7 +1902,7 @@ h4:hover a.no-bdrc img { opacity:1; }
 
 
 .resource .data.images-title { display:flex; /*align-items: end;*/ position:relative; flex-wrap:wrap;}
-.resource .data.etext-title { padding-right:270px; display:flex; align-items: end;position:relative;}
+.resource .data.etext-title { padding-right:270px; display:flex; align-items: flex-start;position:relative;}
 
 .resource .data h2.intro,
 .resource .data h2.intro + h2 span,
